--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   },
   "author": "",
   "license": "ISC",
+  "keywords": [
+    "nodejs",
+    "express",
+    "sequelize",
+    "rest",
+    "api",
+    "postgresql"
+  ],
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
